[gd_scene load_steps=49 format=3 uid="uid://0uj3ocwe8x5y"]

[ext_resource type="Script" path="res://scripts/characters/player/player.gd" id="1_27mnv"]
[ext_resource type="Texture2D" uid="uid://ddl1uoften65p" path="res://assets/Characters/Basic Charakter Actions.png" id="1_m8v1t"]
[ext_resource type="Texture2D" uid="uid://cnm4a4in7h5ob" path="res://assets/Characters/Basic Charakter Spritesheet.png" id="2_4moqj"]
[ext_resource type="Script" path="res://scripts/state/Finite State Machine.gd" id="4_sy8kt"]
[ext_resource type="Script" path="res://scripts/characters/player/state/playerMove.gd" id="5_dvkbx"]
[ext_resource type="Script" path="res://scripts/characters/player/state/playerIdle.gd" id="6_o7qwm"]
[ext_resource type="Script" path="res://scripts/characters/player/state/playerAttack.gd" id="7_kqq81"]
[ext_resource type="Script" path="res://scripts/characters/player/state/playerInteraction.gd" id="8_qswfj"]
[ext_resource type="PackedScene" uid="uid://31o5an10jxkr" path="res://scripts/helper/state_debugger.tscn" id="9_ou7fo"]
[ext_resource type="PackedScene" uid="uid://dul7fy1qumumw" path="res://scripts/components/health_component.tscn" id="10_3wijv"]
[ext_resource type="PackedScene" uid="uid://d2sgg15q4s84b" path="res://scripts/components/hit_box_component.tscn" id="11_pgu0l"]
[ext_resource type="PackedScene" uid="uid://4u5v0umn6svl" path="res://scenes/ui/progress_bar/progress_bar.tscn" id="12_ggoln"]
[ext_resource type="Script" path="res://scripts/components/PlayerHitBoxComponent.gd" id="13_pjjvb"]

[sub_resource type="Animation" id="Animation_5mjdk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}

[sub_resource type="Animation" id="Animation_5b0oc"]
resource_name = "attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ogdok"]
resource_name = "attack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_5alwn"]
resource_name = "attack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_hpfit"]
resource_name = "attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yees1"]
_data = {
"RESET": SubResource("Animation_5mjdk"),
"attack_down": SubResource("Animation_5b0oc"),
"attack_left": SubResource("Animation_ogdok"),
"attack_right": SubResource("Animation_5alwn"),
"attack_up": SubResource("Animation_hpfit")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_808ms"]
atlas = ExtResource("1_m8v1t")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukt5t"]
atlas = ExtResource("1_m8v1t")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj7km"]
atlas = ExtResource("1_m8v1t")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_18xbc"]
atlas = ExtResource("1_m8v1t")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f42c3"]
atlas = ExtResource("1_m8v1t")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0scb"]
atlas = ExtResource("1_m8v1t")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ybk"]
atlas = ExtResource("1_m8v1t")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y1t7"]
atlas = ExtResource("1_m8v1t")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hjdc"]
atlas = ExtResource("2_4moqj")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_djiwd"]
atlas = ExtResource("2_4moqj")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mg1c"]
atlas = ExtResource("2_4moqj")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nw6x"]
atlas = ExtResource("2_4moqj")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf4a4"]
atlas = ExtResource("2_4moqj")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_57x4k"]
atlas = ExtResource("2_4moqj")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnk2y"]
atlas = ExtResource("2_4moqj")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgtfm"]
atlas = ExtResource("2_4moqj")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vuyt"]
atlas = ExtResource("2_4moqj")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecsfb"]
atlas = ExtResource("2_4moqj")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u07su"]
atlas = ExtResource("2_4moqj")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb3y3"]
atlas = ExtResource("2_4moqj")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbkd3"]
atlas = ExtResource("2_4moqj")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_36q2v"]
atlas = ExtResource("2_4moqj")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v22o8"]
atlas = ExtResource("2_4moqj")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ola42"]
atlas = ExtResource("2_4moqj")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_a5mhe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_808ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukt5t")
}],
"loop": false,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj7km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18xbc")
}],
"loop": false,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f42c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0scb")
}],
"loop": false,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ybk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y1t7")
}],
"loop": false,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hjdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djiwd")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mg1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nw6x")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf4a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57x4k")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnk2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgtfm")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vuyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecsfb")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u07su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb3y3")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbkd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36q2v")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v22o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ola42")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v8xo4"]
radius = 6.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xv4h2"]
radius = 5.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xr2v2"]
radius = 7.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nku4k"]
radius = 7.0
height = 20.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_27mnv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yees1")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a5mhe")
animation = &"attack_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v8xo4")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_sy8kt")
initial_state = NodePath("playerIdle")

[node name="playerMove" type="Node" parent="FSM" node_paths=PackedStringArray("player", "animation")]
script = ExtResource("5_dvkbx")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")

[node name="playerIdle" type="Node" parent="FSM" node_paths=PackedStringArray("player", "animation")]
script = ExtResource("6_o7qwm")
player = NodePath("../..")
animation = NodePath("../../AnimatedSprite2D")

[node name="playerAttack" type="Node" parent="FSM" node_paths=PackedStringArray("player", "animation")]
script = ExtResource("7_kqq81")
player = NodePath("../..")
animation = NodePath("../../AnimationPlayer")

[node name="playerInteract" type="Node" parent="FSM"]
script = ExtResource("8_qswfj")

[node name="WeaponHitBox" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHitBox"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_xv4h2")
disabled = true

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xr2v2")
disabled = true

[node name="Label" parent="." instance=ExtResource("9_ou7fo")]

[node name="HealthComponent" parent="." instance=ExtResource("10_3wijv")]
max_health = 100.0

[node name="ProgressBar" parent="." instance=ExtResource("12_ggoln")]
offset_left = -11.0
offset_top = -48.0
offset_right = -11.0
offset_bottom = -48.0

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("11_pgu0l")]
script = ExtResource("13_pjjvb")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_nku4k")

[connection signal="area_entered" from="WeaponHitBox" to="FSM/playerAttack" method="_on_weapon_hit_box_area_entered"]
[connection signal="body_entered" from="InteractionArea" to="FSM/playerInteract" method="_on_area_2d_body_entered"]
